--- a/src/style.css
+++ b/src/style.css
@@ -1,157 +1,294 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+    font-family: special-elite, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
 
-  color-scheme: light dark;
-  color: #dad8d0;
-  background-color: #1D0304;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+    color-scheme: light dark;
+    color: #dad8d0;
+    background-color: #1D0304;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+    font-weight: 500;
+    color: #646cff;
+    text-decoration: inherit;
 }
+
 a:hover {
-  color: #535bf2;
+    color: #535bf2;
+}
+
+a {
+    font-weight: 500;
+    color: #646cff;
+    text-decoration: inherit;
+}
+
+a:hover {
+    color: #535bf2;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  justify-content: center;
-  min-width: 320px;
-  min-height: 100vh;
+    margin: 0;
+    display: flex;
+    place-items: center;
+    justify-content: center;
+    min-width: 320px;
+    min-height: 100vh;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+    font-size: 3.2em;
+    line-height: 1.1;
+}
+
+ul {
+    list-style-type: none;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+    border-radius: 8px;
+    border: 1px solid transparent;
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    background-color: #1a1a1a;
+    cursor: pointer;
+    transition: border-color 0.25s;
 }
 
-.logo{
-  position: absolute;
-  background: url(./assets/img/logo_w_no_bg.svg);
-  background-size: contain;
-  background-repeat: no-repeat;
-  left: 0;
-  right: 0;
-  z-index: 100;
-  height: 200px;
-  width: 200px;
-  top: 350px;
-  margin: auto; 
-  transition: filter 200ms ease;
+button:hover {
+    border-color: #646cff;
 }
+
+button:focus,
+button:focus-visible {
+    outline: 4px auto -webkit-focus-ring-color;
+}
+
+.logo {
+    position: absolute;
+    background: url(./assets/img/logo_w_no_bg.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    height: 200px;
+    width: 200px;
+    top: 350px;
+    margin: auto;
+    transition: filter 200ms ease;
+}
+
 .logo:hover {
-  filter: drop-shadow(0 0 5px rgb(190, 192, 180));
+    filter: drop-shadow(0 0 5px #dad8d0);
 }
+
 .card {
-  padding: 2em;
+    padding: 2em;
 }
 
 #app {
-  width:100vw;
-  max-width: 1300px;
-  height:100vh;
-  position: relative;
+    width: 100vw;
+    max-width: 1300px;
+    height: 100vh;
+    position: relative;
 }
 
 .wallpaper {
-  display: flex;
-  flex-wrap: wrap;
-  max-width: 1300px;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1300px;
 }
 
 
 .wallpaper div {
-  opacity: 0;
-  flex: 1 1 460px;
-  min-height: 450px;
+    opacity: 0;
+    flex: 1 1 460px;
+    min-height: 450px;
 }
 
-.wallpaper .anim, .wallpaper .anem {
-  opacity: 0.6;
-  transition: opacity 2s linear;
+.wallpaper .anim {
+    opacity: 0.6;
+    transition: opacity 2s linear;
 }
+
 .wallpaper .dark {
-  opacity: 0;
-  transition: opacity 2s linear;
+    opacity: 0;
+    transition: opacity 2s linear;
 }
 
 
-.wallpaper .slide1{ background: center / contain no-repeat url(./assets/img/slides/fort_01.jpg)}
-.wallpaper .slide2{ background: center / contain no-repeat url(./assets/img/slides/fort_02.jpg) }
-.wallpaper .slide3{ background: center / contain no-repeat url(./assets/img/slides/fort_03.jpg) }
-.wallpaper .slide4{ background: center / contain no-repeat url(./assets/img/slides/fort_04.jpg) }
-.wallpaper .slide5{ background: center / contain no-repeat url(./assets/img/slides/fort_05.jpg) }
-.wallpaper .slide6{ background: center / contain no-repeat url(./assets/img/slides/fort_06.jpg) }
-.wallpaper .slide7{ background: center / contain no-repeat url(./assets/img/slides/fort_07.jpg) }
-.wallpaper .slide8{ background: center / contain no-repeat url(./assets/img/slides/fort_08.jpg) }
-.wallpaper .slide9{ background: center / contain no-repeat url(./assets/img/slides/fort_09.jpg) }
-.wallpaper .slide10{ background: center / contain no-repeat url(./assets/img/slides/fort_10.jpg) }
-.wallpaper .slide11{ background: center / contain no-repeat url(./assets/img/slides/fort_11.jpg) }
-.wallpaper .slide12{ background: center / contain no-repeat url(./assets/img/slides/fort_12.jpg) }
-.wallpaper .slide13{ background: center / contain no-repeat url(./assets/img/slides/fort_13.jpg) }
-.wallpaper .slide14{ background: center / contain no-repeat url(./assets/img/slides/fort_14.jpg) }
-.wallpaper .slide15{ background: center / contain no-repeat url(./assets/img/slides/fort_15.jpg) }
-.wallpaper .slide16{ background: center / contain no-repeat url(./assets/img/slides/fort_16.jpg) }
+.wallpaper .slide1 {
+    background: center / contain no-repeat url(./assets/img/slides/fort_01.jpg)
+}
+
+.wallpaper .slide2 {
+    background: center / contain no-repeat url(./assets/img/slides/fort_02.jpg)
+}
+
+.wallpaper .slide3 {
+    background: center / contain no-repeat url(./assets/img/slides/fort_03.jpg)
+}
+
+.wallpaper .slide4 {
+    background: center / contain no-repeat url(./assets/img/slides/fort_04.jpg)
+}
+
+.wallpaper .slide5 {
+    background: center / contain no-repeat url(./assets/img/slides/fort_05.jpg)
+}
+
+.wallpaper .slide6 {
+    background: center / contain no-repeat url(./assets/img/slides/fort_06.jpg)
+}
+
+.wallpaper .slide7 {
+    background: center / contain no-repeat url(./assets/img/slides/fort_07.jpg)
+}
+
+.wallpaper .slide8 {
+    background: center / contain no-repeat url(./assets/img/slides/fort_08.jpg)
+}
+
+.wallpaper .slide9 {
+    background: center / contain no-repeat url(./assets/img/slides/fort_09.jpg)
+}
+
+.wallpaper .slide10 {
+    background: center / contain no-repeat url(./assets/img/slides/fort_10.jpg)
+}
+
+.wallpaper .slide11 {
+    background: center / contain no-repeat url(./assets/img/slides/fort_11.jpg)
+}
+
+.wallpaper .slide12 {
+    background: center / contain no-repeat url(./assets/img/slides/fort_12.jpg)
+}
+
+.wallpaper .slide13 {
+    background: center / contain no-repeat url(./assets/img/slides/fort_13.jpg)
+}
+
+.wallpaper .slide14 {
+    background: center / contain no-repeat url(./assets/img/slides/fort_14.jpg)
+}
+
+.wallpaper .slide15 {
+    background: center / contain no-repeat url(./assets/img/slides/fort_15.jpg)
+}
+
+.wallpaper .slide16 {
+    background: center / contain no-repeat url(./assets/img/slides/fort_16.jpg)
+}
 
 @keyframes showPhoto {
-  0% {
-    opacity: 0;
-    border: 1px solid blue;
-  }
-  100% {
-    opacity: 0.5;
-    border: 15px solid blue;
-  }
+    0% {
+        opacity: 0;
+        border: 1px solid blue;
+    }
+    100% {
+        opacity: 0.5;
+        border: 15px solid blue;
+    }
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
-    color: #dad8d0;
-    /* background-color: #ffffff; */
-  }
-  a:hover {
-    color: #dad8d0;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+    :root {
+        color: #dad8d0;
+        /* background-color: #ffffff; */
+    }
+
+    a:hover {
+        color: #dad8d0;
+    }
+
+    button {
+        background-color: #f9f9f9;
+    }
+
+    #topMenu {
+        color: #dad8d0;
+        user-select: none;
+        position: absolute;
+        z-index: 100;
+        cursor: pointer;
+        font-size: 20px;
+    }
+
+    #topMenu .title {
+        margin-top: 8px;
+        background: center / contain no-repeat url(./assets/img/burger_menu2.svg);
+        width: 20px;
+        height: 20px;
+    }
+
+    #topMenu .title, #topMenu .menu div {
+        padding: 10px 20px 0;
+    }
+
+    #topMenu .menu {
+        padding-inline-start: 20px;
+    }
+
+
+    #topMenu .menu.shown {
+        display: block;
+    }
 }
+.hidden {
+    display: none;
+}
+
+.clickable:hover {
+    filter: drop-shadow(0 0 7px #dad8d0);
+    transition: filter 200ms;
+}
+
+#links {
+    position: absolute;
+    border-radius: 5px;
+    background-color: rgb(218 216 208 / 10%);
+    left: 85px;
+    top: 37px;
+    z-index: 100;
+}
+.subPage .text {
+    padding: 1em;
+}
+.subPage {
+    position: absolute;
+    border-radius: 5px;
+    background-color: rgb(218 216 208 / 10%);
+    left: 85px;
+    top: 37px;
+    z-index: 100;
+}
+.close-box {
+    position: absolute;
+    right: 10px;
+}
+
+#links ul {
+    padding-inline: 1em;
+}
+
+#links a {
+    margin-top: 15px;
+    color: #dad8d0;
+    background: center bottom / 14px repeat-x url(./assets/img/underline2.svg);
+}
+
+@font-face {
+    font-family: "special-elite";
+    src: url(./assets/fonts/SpecialElite-Regular.ttf) format("truetype");
+}
+
