animate burger menu

--- a/src/style.css
+++ b/src/style.css
@@ -188,11 +188,17 @@ button {
 }
 
 #topMenu .title {
-    margin-top: 8px;
-    background: center / contain no-repeat url(./assets/img/burger_menu2.svg);
-    width: 20px;
-    height: 20px;
+    /*margin-top: 8px;*/
+    /*background: center / contain no-repeat url(./assets/img/burger_menu3.svg);*/
+    width: 30px;
+    height: 30px;
 }
+#topMenu .title svg{
+    width: 30px;
+    height: 30px;
+
+}
+
 
 #topMenu .title, #topMenu .menu div {
     padding: 10px 20px 0;
